# ar-course-project

./: .gitignore  bashrc  docker-compose.yml  entrypoint.sh  ros.Dockerfile  test_id
.devcontainer/: devcontainer.json
src/yumi-control/: CMakeLists.txt  controller_plugins.xml  package.xml
src/yumi-control/include/yumi_control/: yumi_id_controller.hpp
src/yumi-control/src/: publisher_member_function.cpp  yumi_id_controller.cpp
src/yumi-description/: CMakeLists.txt  package.xml
src/yumi-description/hooks/: resource_paths.dsv.in
src/yumi-description/launch/: state_publisher_launch.py
src/yumi-description/urdf/: yumi.rviz  yumi.transmission.xacro  yumi.urdf  yumi.urdf.xacro  yumi.xacro
src/yumi-description/urdf/Gazebo/: gazebo.urdf.xacro
src/yumi-description/urdf/Grippers/: yumi_servo_gripper.gazebo.xacro  yumi_servo_gripper.xacro
src/yumi-launch/: CMakeLists.txt  package.xml
src/yumi-launch/config_templates/: effort_controller.yaml.tmp  id_controller.yaml.tmp  pid_controller.yaml.tmp
src/yumi-launch/launch/: base.launch.py  id_controller_with_gui.launch.py
src/yumi-launch/scripts/: generate_controller_file.py
